infrastructure/mcp-n8n/mcp-n8n-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-n8n
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "mcp-n8n.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - name: mcp-n8n
          port: 3000
